--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ googleAnalytics = "UA-111367451-1"
     showBorder = true
     backgroundColor = "white"
     font = "Raleway"
+    css = ["/css/figures.css"]
 
 [[menu.main]]
     url = "/"
